second commit. Added CSS, added flexbox.

--- a/about.html
+++ b/about.html
@@ -5,6 +5,10 @@
 <meta charset="utf-8"/>
 <meta lang="en"/>
 
+<link href="https://fonts.googleapis.com/css?family=Architects+Daughter|Quicksand" rel="stylesheet">
+
+<link href="newportfolio.css" rel="stylesheet" type="text/css"/>
+
 <title>Jennifer Doig || Developer</title>
 
 
@@ -13,25 +17,36 @@
 
 
 <!--Nav bar-->
-  <nav>
-    <ul>
-      <li>Home</li>
-      <li>About</li>
-      <li>Portfolio</li>
-      <li>Resume</li>
-    </ul>
-  </nav>
+<nav>
+  <ul class="container">
+    <li class="flex-item-1">
+      <a href="home.html">Home</a>
+    </li>
+    <li class="flex-item-1">
+      <a href="about.html">About</a>
+    </li>
+    <li class="flex-item-1">
+      <a href="portfolio.html">Portfolio
+      </a>
+    </li>
+    <li class="flex-item-1">
+      <a href="Resume.html">Resume</a>
+    </li>
+
+  </ul>
+</nav>
 
   <!--Header-->
-
-<h2>Jenn Doig</h2>
-
+<div class="container">
+<h2 class="flex-item-2">Jenn Doig</h2>
+</div>
 
 <!--main body text-->
 
 <div class="container">
-  <h2>Hey!</h2>
-  <p>My name is Jennifer, but my friends call me Jenn. The second N is totally unnecessary but I thought it was cool in high school and now I can't seem to drop it. I'm a Scottish transplant and my official background is in healthcare, but my true passion lies in creating content. I love to write, to problem solve, and to make things look pretty. I blog about shallow stuff like eye cream and I privately write about serious stuff like morality, and I find joy in all of it. I started out dabbling in self-hosted Wordpress and decided I wanted more control over my content. I discovered I loved the problem solving aspect of front end development, and now here I am. It's nice to meet you!</p>
+  <h3 class="flex-item-2">Hey!</h3>
+  <img src="jenn.jpg"/>
+  <p class="flex-item-1">My name is Jennifer, but my friends call me Jenn. The second N is totally unnecessary but I thought it was cool in high school and now I can't seem to drop it. I'm a Scottish transplant and my official background is in healthcare, but my true passion lies in creating content. I love to write, to problem solve, and to make things look pretty. I blog about shallow stuff like eye cream and I privately write about serious stuff like morality, and I find joy in all of it. I started out dabbling in self-hosted Wordpress and decided I wanted more control over my content. I discovered I loved the problem solving aspect of front end development, and now here I am. It's nice to meet you!</p>
 </div>
 
 
