--- a/home.html
+++ b/home.html
@@ -5,6 +5,10 @@
 <meta charset="utf-8"/>
 <meta lang="en"/>
 
+<link href="https://fonts.googleapis.com/css?family=Architects+Daughter|Quicksand" rel="stylesheet">
+
+<link href="newportfolio.css" rel="stylesheet" type="text/css"/>
+
 <title>Jennifer Doig || Developer</title>
 
 
@@ -14,24 +18,35 @@
 
 <!--Nav bar-->
   <nav>
-    <ul>
-      <li>Home</li>
-      <li>About</li>
-      <li>Portfolio</li>
-      <li>Resume</li>
+    <ul class="container">
+      <li class="flex-item-1">
+        <a href="home.html">Home</a>
+      </li>
+      <li class="flex-item-1">
+        <a href="about.html">About</a>
+      </li>
+      <li class="flex-item-1">
+        <a href="portfolio.html">Portfolio
+        </a>
+      </li>
+      <li class="flex-item-1">
+        <a href="Resume.html">Resume</a>
+      </li>
+
     </ul>
   </nav>
 
   <!--Header-->
-
-<h2>Jenn Doig</h2>
-
+<div class="container">
+<h2 class="flex-item-2">Jenn Doig</h2>
+</div>
 
 <!--main body text-->
 
 <div class="container">
-  <h2>Welcome</h2>
+  <div class="flex-item-2"><h2>Welcome</h2></div>
   <p>Thanks for stopping by. This site is a short introduction to me as a person and a developer. Hopefully you enjoy what you find!</p>
+
 </div>
 
 
