--- a/portfolio.html
+++ b/portfolio.html
@@ -5,27 +5,43 @@
 <meta charset="utf-8"/>
 <meta lang="en"/>
 
+<link href="https://fonts.googleapis.com/css?family=Architects+Daughter|Quicksand" rel="stylesheet">
+
+<link href="newportfolio.css" rel="stylesheet" type="text/css"/>
+
 <title>Jennifer Doig || Developer</title>
 
 
 </head>
+
+
 <body>
 
 
 <!--Nav bar-->
-  <nav>
-    <ul>
-      <li>Home</li>
-      <li>About</li>
-      <li>Portfolio</li>
-      <li>Resume</li>
-    </ul>
-  </nav>
+<nav>
+  <ul class="container">
+    <li class="flex-item-1">
+      <a href="home.html">Home</a>
+    </li>
+    <li class="flex-item-1">
+      <a href="about.html">About</a>
+    </li>
+    <li class="flex-item-1">
+      <a href="portfolio.html">Portfolio
+      </a>
+    </li>
+    <li class="flex-item-1">
+      <a href="Resume.html">Resume</a>
+    </li>
+
+  </ul>
+</nav>
 
   <!--Header-->
-
-<h2>Jenn Doig</h2>
-
+<div class="container">
+<h2 class="flex-item-2">Jenn Doig</h2>
+</div>
 
 <!--main body text-->
 
