Third commit. Made more responsive. Changed portfolio section. Removed repetitive code.

--- a/about.html
+++ b/about.html
@@ -44,9 +44,17 @@
 <!--main body text-->
 
 <div class="container">
-  <h3 class="flex-item-2">Hey!</h3>
-  <img src="jenn.jpg"/>
-  <p class="flex-item-1">My name is Jennifer, but my friends call me Jenn. The second N is totally unnecessary but I thought it was cool in high school and now I can't seem to drop it. I'm a Scottish transplant and my official background is in healthcare, but my true passion lies in creating content. I love to write, to problem solve, and to make things look pretty. I blog about shallow stuff like eye cream and I privately write about serious stuff like morality, and I find joy in all of it. I started out dabbling in self-hosted Wordpress and decided I wanted more control over my content. I discovered I loved the problem solving aspect of front end development, and now here I am. It's nice to meet you!</p>
+
+  <h3 class="flex-item-2">
+    <img src="jenn_002.jpg"/>
+    <br>
+    <br>
+Hey!
+  </h3>
+
+  <p class="flex-item-1">
+
+    My name is Jennifer, but my friends call me Jenn. The second N is totally unnecessary but I thought it was cool in high school and now I can't seem to drop it. I'm a Scottish transplant and my official background is in healthcare, but my true passion lies in creating content. I love to write, to problem solve, and to make things look pretty. I blog about shallow stuff like eye cream and I privately write about serious stuff like morality, and I find joy in all of it. I started out dabbling in self-hosted Wordpress and decided I wanted more control over my content. I discovered I loved the problem solving aspect of front end development, and now here I am. It's nice to meet you!</p>
 </div>
 
 
