--- a/portfolio.html
+++ b/portfolio.html
@@ -4,7 +4,7 @@
 <head>
 <meta charset="utf-8"/>
 <meta lang="en"/>
-
+<meta name="viewport" content="width=device-width" initial-scale="1.0"/>
 <link href="https://fonts.googleapis.com/css?family=Architects+Daughter|Quicksand" rel="stylesheet">
 
 <link href="newportfolio.css" rel="stylesheet" type="text/css"/>
@@ -46,8 +46,56 @@
 <!--main body text-->
 
 <div class="container">
-  <h2>Hi! Excuse the mess, I'm still working on this part of the site.</h2>
-  <p></p>
+  <h2>Past Projects</h2>
+
+  <div class="grid">
+
+    <div class="box-1">
+        <h3>Project #1</h3>
+        <img src="moon.jpg" alt="moon"/>
+        <p>Include information about the project here. Make it a paragraph.
+            <a href="#">Click here to learn more.</a>
+        </p>
+    </div>
+    <div class="box-2">
+        <h3>Project #2</h3>
+        <img src="floral.jpg" alt="flowers"/>
+        <p>Include information about the project here. Make it a paragraph.
+            <a href="#">Click here to learn more.</a>
+        </p>
+      </div>
+        <div class="box-3">
+            <h3>Project #3</h3>
+            <img src="shore.jpg" alt="Seashore"/>
+            <p>Include information about the project here. Make it a paragraph.
+                <a href="#">Click here to learn more.</a>
+            </p>
+        </div>
+        <div class="box-4">
+            <h3>Project #4</h3>
+            <img src="forest.jpg" alt="forest"/>
+            <p>Include information about the project here. Make it a paragraph.
+                <a href="#">Click here to learn more.</a>
+            </p>
+        </div>
+        <div class="box-5">
+            <h3>Project #5</h3>
+            <img src="floral.jpg" alt="flowers"/>
+            <p>Include information about the project here. Make it a paragraph.
+                <a href="#">Click here to learn more.</a>
+            </p>
+          </div>
+            <div class="box-6">
+                <h3>Project #6</h3>
+                <img src="shore.jpg" alt="Seashore"/>
+                <p>Include information about the project here. Make it a paragraph.
+                    <a href="#">Click here to learn more.</a>
+                </p>
+            </div>
+    </div>
+
+</div>
+
 </div>
 
 
